Feat: lectura de indicadores desde csv (pagina de indicadores), hay vista previa

--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     },
     "dependencies": {
         "bs-stepper": "^1.7.0",
-        "pochijs": "^1.0.10",
         "chart.js": "^4.4.7",
+        "papaparse": "^5.5.2",
+        "pochijs": "^1.0.10",
         "sweetalert2": "^11.14.5"
     }
 }
