--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dependencies": {
         "bs-stepper": "^1.7.0",
         "chart.js": "^4.4.7",
+        "chartjs-plugin-zoom": "^2.2.0",
         "papaparse": "^5.5.2",
         "pochijs": "^1.0.10",
         "sweetalert2": "^11.14.5"
